--- a/thesis/Co - Features.lyx
+++ b/thesis/Co - Features.lyx
@@ -3614,19 +3614,19 @@ shekir
 \begin_layout Enumerate
 
 \series bold
-Allegorical ayahs (
+Repetitions and Allegorical ayahs (
 \lang arabic_arabi
-المتشابهات
+التكرار والمتشابهات
 \lang english
 ): 
 \series default
-enable the Qur'an scholars to retrieve allegorical ayahs whether they are
- identical or roughly similar.
+enable the Qur'an scholars to retrieve similar ayahs whether they are identical
+ or roughly similar, whether similar in writing or in meaning.
 \end_layout
 
 \begin_deeper
 \begin_layout Itemize
-Allegories of {
+Repetitions of {
 \lang arabic_arabi
 الرحمن
 \lang english
