--- a/Paper/IEEEarab-ar.lyx
+++ b/Paper/IEEEarab-ar.lyx
@@ -298,7 +298,7 @@ left side}{right side
 
 \begin_layout Abstract
 القرآن هو كتاب يقدِّسه كل المسلمين، يحتوي على معلومات زاخرة تمسّ كل نواحي
- الحياة: علمية، إجتماعية، تاريخية وسياسية.
+ الحياة: علمية، اجتماعية، تاريخية وسياسية.
  القرآن كتاب فريد من حيث محتوياته و كيفية كتابتها وترتيبها وكذلك من حيث
  بنية اللغة المستعملة.
  لكننا لا نستطيع استخراج إلا النزر اليسير منها فالفهارس اليدوية
@@ -328,7 +328,7 @@ left side}{right side
 (المطبوعة) لا تساعد بالكثير حيث أن بضع عمليات بحث تستهلك جهدا ووقتا معتبرين.
  كما أن البحث البسيط بالكلمات كما وردت محدود ولا يوفّر خيارات حقيقية كما
  أنه يقف عاجزا أمام البحث الموضوعي مثلا.
- بسبب هذه المحدوديةيجب علينا أن نجد طرقا أو مناهج للبحث ومن هنا ينبثق اقتراحنا
+ بسبب هذه المحدودية يجب علينا أن نجد طرقا أو مناهج للبحث ومن هنا ينبثق اقتراحنا
  الذي يكمن في تصميم نظام استخراج معلومات يناسب ويلبي احتياجات البحث في القرآن
  الكريم.
  لكن لتحقيق هذا الهدف علينا أوّلا أن نقوم بعمل قائمة تضم كل مزايا البحث
@@ -352,11 +352,11 @@ left side}{right side
  بين الأجيال عن طريق التواتر.
  يعرف القرآن أيضا بأسماء أخرى: الفرقان، الكتاب، الذكر، الوحي والروح.
  ويمثّل أول مصدر للتشريع الإسلامي.
- يحتوي القرآن على معلومات قيّمة عن كل جوانب الحياة: العلمية، الإجتماعية،
+ يحتوي القرآن على معلومات قيّمة عن كل جوانب الحياة: العلمية، الاجتماعية،
  التاريخية والسياسية...
  متفرد بلغته وتركيبته وتنوعه.
  على الرغم مما يحتويه من قدر هائل من المعلومات إلا أننا لا نستطيع الاستخراج
- يدويا الا قدرا بسيطا من هذه المعلومات.
+ يدويا إلا قدرا بسيطا من هذه المعلومات.
  
 \end_layout
 
@@ -392,7 +392,7 @@ left side}{right side
  نبدأ أولا بوضع قائمة مصنفة لميزات البحث الممكنة والمفيدة.
  هذه الورقة تحوي قائمة لميزات البحث التي جمعناها وصنفناها على حسب طبيعة
  الميزة والطريقة التي تنفذ بها.
- سنقوم بطرح الاشكالية أولا ثم نضع تصنيفا أوليا لميزات البحث .
+ سنقوم بطرح الإشكالية أولا ثم نضع تصنيفا أوليا لميزات البحث .
 \begin_inset Newline newline
 \end_inset
 
@@ -425,18 +425,18 @@ left side}{right side
 نبدأ بالنقطة الأولى، البحث في القرآن نظريا مشابه لأي بحث في مصدر آخر.
  البحث في مصادر المعلومات مر بمراحل عديدة: في الأول البحث كان تسلسليا مبني
  على كلمات بحث دقيقة قبل ظهور العبارات النمطية.
- البحث النصي الكامل ظهر لمواجهةنقائص البحث التسلسلي في المصادر كبيرة المحتوى.البح
-ث النصي الكامل يحوي آليات جديدة لتحليل النص الذي يضم فصل الكلمات والتسوية
+ البحث النصي الكامل ظهر لمواجهة نقائص البحث التسلسلي في المصادر كبيرة المحتوى.الب
+حث النصي الكامل يحوي آليات جديدة لتحليل النص الذي يضم فصل الكلمات والتسوية
  و التجذيع.
- تجميع الاحصائيات أصبح الآن جزء من عملية البحث، لأنه يساعد في تحسين ترتيب
+ تجميع الإحصائيات أصبح الآن جزء من عملية البحث، لأنه يساعد في تحسين ترتيب
  نتائج البحث وتقديم الاقتراحات.
  بعد ظهور الواب الدلالي، إتخذ البحث نهجا دلاليا أين يمكننا تحسين نتائج البحث
  بفهم ما يريده المستخدم والمعنى السياقي للمصطلحات كما تظهر في قاعدة البيانات
  وذلك لإظهار نتائج ذات صلة.وللحصول على تجربة مستخدم أكثر تسعى محركات البحث
  لتحسين طريقة إظهار النتائج بتصنيفها حسب عدد مرات ظهورها في المصدر أو الوثيقة،
  حسب معايير التصنيف، تحديد المصطلحات، ترقيم الصفحات، الفرز و التوسيع.
- بالإضافة الى تحسين أساليب إدخال مصطلحات البحث بإضافة طرق إدخال جديدة مثلا:
- الإدخال الصوتي، أو إقتراح كلمات مشابهة.
+ بالإضافة إلى تحسين أساليب إدخال مصطلحات البحث بإضافة طرق إدخال جديدة مثلا:
+ الإدخال الصوتي، أو اقتراح كلمات مشابهة.
  لحد الآن أغلب هذه الطرق غير مستعملة ومطبقة على القرآن.
  وأغلبها تحتاج للتعديل لتلائم اللغة العربية.
  
@@ -446,7 +446,7 @@ left side}{right side
 ثانيا، تصنف لغة القرآن كلغة عربية كلاسيكية وهي لغة مميزة نظرا لتركيبتها
  وطريقة إملائها، وعلينا أن نأخذ هذا بعين الاعتبار أثناء مرحلة تحليل النص.
  على سبيل المثال، أشكال الحروف وخصوصا الهمزة، التشكيل، المصادر وجذور الكلمات...
- كل هذا يجب أن يؤخذ بعين الإعتبار،مثلا العبارات النمطية المعروفة تقف عاجزة
+ كل هذا يجب أن يؤخذ بعين الاعتبار،مثلا العبارات النمطية المعروفة تقف عاجزة
  أمام اللغة العربية لأنها لا تعبّر بالضبط عن الحروف العربية لأن علامات التشكيل
  لا تختلف عن الحروف.
  غياب التشكيل يؤدي إلى غموض وصعوبة فهم الكلمة:
@@ -478,7 +478,7 @@ left side}{right side
  العثماني.
  الكتابة العثمانية تتطلب أخذ هذه الخصائص بعين الإعتبار أثناء عملية تحليل
  النص.
- القرآن مقسم الى عدة مستويات تحليلية: 
+ القرآن مقسم إلي عدة مستويات تحليلية: 
 \end_layout
 
 \begin_layout Itemize
@@ -597,7 +597,7 @@ left side}{right side
 \series bold
 نظام الاحصاءات:
 \series default
- هذا الصنف يغطي كل الاحتياجات الاحصائية التي يمكن أن يريدها المستخدم في
+ هذا الصنف يغطي كل الاحتياجات الإحصائية التي يمكن أن يريدها المستخدم في
  القرآن .مثلا ، البحث عن الكلمة الأكثر ورودا.
 \end_layout
 
@@ -611,7 +611,7 @@ left side}{right side
 \end_layout
 
 \begin_layout Section
-الإقتراحات
+المزايا المقترحة
 \end_layout
 
 \begin_layout Standard
@@ -623,11 +623,15 @@ left side}{right side
 \end_layout
 
 \begin_layout Itemize
-محركات البحث الكلاسيكية والدلالية: غوغل
+محركات البحث الكلاسيكية والدلالية: 
+\lang english
+Google
 \end_layout
 
 \begin_layout Itemize
-محركات البحث العربية: تايا إت
+محركات البحث العربية: 
+\lang english
+Taya-it
 \end_layout
 
 \begin_layout Itemize
@@ -653,7 +657,7 @@ Lucene
 
 \begin_layout Standard
 لقد قمنا بتهذيب هذه الأفكار لتناسب سياق العربية والقرآن كما أن هنا ك عدة
- مزايا هي جديدة كلية قمنا بإقتراحها لتلبي حاجة للبحث أو لتعالج مشكلة محددة.
+ مزايا هي جديدة كلية قمنا باقتراحها لتلبي حاجة للبحث أو لتعالج مشكلة محددة.
  
 \end_layout
 
@@ -760,7 +764,7 @@ Lucene
 البحث بالمجالات: 
 \series default
 يستعمل للبحث عن مجال من القيم في حقل رقمي.
- في حالة القرآن يفيد في حقول كرقم الآية ، رقم الصفحة،رقم الحزب، الحقول الاحصائية
+ في حالة القرآن يفيد في حقول كرقم الآية ، رقم الصفحة،رقم الحزب، الحقول الإحصائية
 \end_layout
 
 \begin_deeper
